--- a/cargo.toml
+++ b/cargo.toml
@@ -1,1 +1,16 @@
+[package]
+name = "nft_wallet"
+version = "0.1.0"
+edition = "2021"
+
+[dependencies]
+ic-cdk = "0.6.6"
+ic-cdk-macros = "0.6.6"
+serde = "1.0"
+serde_cbor = "0.11"
+serde_json = "1.0"
+serde_bytes = "0.11"
+ic-types = "0.4"
+sha2 = "0.9"
+rand = "0.8"
 
